--- a/presentacion/emp_viandas.html
+++ b/presentacion/emp_viandas.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./assets/css/style_emp_viandas.css" />
-  <link rel="icon" sizes="16x16 32x32 48x48" type="imagen/png" href="assets/recursos/logo_sisviansa.png" />
+  <link rel="icon" sizes="16x16 32x32 48x48" type="imagen/png" href="assets/iconos/logo_sisviansa.png" />
   <script src="js/main.js"></script>
 
   <title>Viandas</title>
@@ -15,10 +15,10 @@
 <body>
   <header>
     <nav>
-      <img src="./assets/icons/icon_menu.svg" alt="menu" class="menu" />
+      <img src="./assets/iconos/icon_menu.svg" alt="menu" class="menu" />
 
       <div class="navbar-left">
-        <img src="./assets/recursos/logo_sisviansa.png" alt="logo" class="logo" />
+        <img src="./assets/iconos/logo_sisviansa.png" alt="logo" class="logo" />
 
         <ul>
           <li></li>
@@ -37,7 +37,7 @@
         <ul>
           <li class="navbar-email">sisviansa@gmail.com</li>
           <li class="navbar-shopping-cart">
-            <img src="./assets/icons/icon_shopping_cart.svg" alt="shopping cart" />
+            <img src="./assets/iconos/icon_shopping_cart.svg" alt="shopping cart" />
             <div id="cantCarrito"></div>
           </li>
         </ul>
@@ -87,7 +87,7 @@
         </div>
         <div>
           <fieldset class="img">
-            <img src="assets/viandas/2.jpg" class="img" />
+            <img src="assets/recursos/viandas/2.jpg" class="img" />
           </fieldset>
           <div class="contenido-botones">
             <button class="secondary-button" id="agregar-ingrediente">
@@ -115,7 +115,7 @@
         </div>
         <div>
           <fieldset class="img">
-            <img src="assets/viandas/2.jpg" class="img" />
+            <img src="assets/recursos/viandas/2.jpg" class="img" />
           </fieldset>
         </div>
       </fieldset>
@@ -140,7 +140,7 @@
         </div>
         <div>
           <fieldset class="img">
-            <img src="assets/viandas/2.jpg" class="img" />
+            <img src="assets/recursos/viandas/2.jpg" class="img" />
           </fieldset>
         </div>
       </fieldset>
