--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -6,13 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="assets/css/style.css" />
   <script src="js/jquery-3.5.1.min.js"></script>
+  <script src="js/menues.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&display=swap" rel="stylesheet" />
   <link rel="icon" sizes="16x16 32x32 48x48" type="imagen/png" href="assets/iconos/logo_sisviansa.png" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-
+  BVUwUowj6cN+3gU01B6A8ETNE5g4haC9tIpX41UktGOJ9EM76R90JD46wDl8jTz" crossorigin="anonymous"></script>
 
   <title>Sisviansa</title>
 </head>
@@ -119,30 +121,21 @@
       <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
+            aria-current="true" aria-label="Menú 1"></button>
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-            aria-label="Slide 2"></button>
+            aria-label="Menú 2"></button>
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-            aria-label="Slide 3"></button>
+            aria-label="Menú 3"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
-            <img src="assets/recursos/menu_comun/celiacos_1.jpg" class="d-block w-100" alt="..." />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Menú n°1</h5>
-            </div>
+            <img src="assets/recursos/menu_comun/clasico_1.jpg" class="d-block w-100" alt="Menú 1 - Imagen 1" />
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="assets/recursos/menu_comun/celiacos_2.jpg" class="d-block w-100" alt="..." />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Menú n°2</h5>
-            </div>
+            <img src="assets/recursos/menu_comun/clasico_2.jpg" class="d-block w-100" alt="Menú 2 - Imagen 1" />
           </div>
           <div class="carousel-item">
-            <img src="assets/recursos/menu_comun/celiacos_3.jpg" class="d-block w-100" alt="..." />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Menú n°3</h5>
-            </div>
+            <img src="assets/recursos/menu_comun/clasico_3.jpg" class="d-block w-100" alt="Menú 3 - Imagen 1" />
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -156,40 +149,44 @@
       </div>
     </div>
   </section>
-  <br />
 
-  <form action="../logica/x.php" method="post" class="input_menues">
-    <fieldset class="eleccion_menu">
-      <input type="radio" name="TipoDieta" id="formCeliaco" class="form-check-input" />
-      <label for="TipoDieta">Celiaco</label>
-      <input type="radio" name="TipoDieta" id="formClasica" />
-      <label for="TipoDieta">Clasico</label>
-      <input type="radio" name="TipoDieta" id="formVegetariano" />
-      <label for="TipoDieta">Vegetariano</label>
-      <input type="radio" name="TipoVegano" id="formVegano" />
-      <label for="TipoDieta">Vegano</label>
-      <input type="radio" name="TipoVegano" id="formMediterraneo" />
-      <label for="TipoDieta">Mediterraneo</label>
-      <input type="radio" name="TipoVegano" id="formCrudivegano" />
-      <label for="TipoDieta">Crudivegano</label>
-      <input type="radio" name="TipoVegano" id="formFlexivegetarianos" />
-      <label for="TipoDieta">Flexivegetarianos</label>
-      <input type="radio" name="TipoVegano" id="formPescetarianos" />
-      <label for="TipoDieta">Pescetarianos</label>
-      <input type="radio" name="TipoVegano" id="formApivegetariano" />
-      <label for="TipoDieta">Apivegetariano</label>
-      <input type="radio" name="TipoVegano" id="formLactovegetarian" />
-      <label for="TipoDieta">Lactovegetariano</label>
-      <input type="radio" name="TipoOvovegetariano" id="formOvovegetariano" />
-      <label for="TipoDieta">Ovovegetariano</label>
-      <input type="radio" name="TipoOvolactovegetariano" id="formOvolactovegetariano" />
-      <label for="TipoDieta">Ovolactovegetariano</label>
-      <!--<input type="radio" name="TipoPostres" id="formPostres" />
-        <label for="TipoDieta">Postres</label>-->
+    <!-- Formulario para seleccionar el menú -->
+    <form action="../logica/paraDiego.php" method="post" class="input_menues">
+      <fieldset class="eleccion_menu">
+        <input type="radio" name="TipoDieta" value="0" id="formClasica" />
+        <label for="formClasica">Clasico</label>
+        <input type="radio" name="TipoDieta" value="1" id="formCeliaco" class="form-check-input" />
+        <label for="formCeliaco">Celiaco</label>
+        <input type="radio" name="TipoDieta" value="2" id="formBajasCalorias" class="form-check-input" />
+        <label for="formBajasCalorias">Bajo en Calorias</label>
+        <input type="radio" name="TipoDieta" value="3" id="formVegano" />
+        <label for="TipoDieta">Vegano</label>
+        <br>
+        <input type="radio" name="TipoDieta" value="4" id="formVegetariano" />
+        <label for="formVegetariano">Vegetariano</label>
+        <input type="radio" name="TipoDieta" value="5" id="formMediterraneo" />
+        <label for="TipoDieta">Mediterraneo</label>
+        <input type="radio" name="TipoDieta" value="6" id="formCrudivegano" />
+        <label for="TipoDieta">Crudivegano</label>
+        <br>
+        <input type="radio" name="TipoDieta" value="7" id="formFlexivegetarianos" />
+        <label for="TipoDieta">Flexivegetarianos</label>
+        <input type="radio" name="TipoDieta" value="8" id="formPescetarianos" />
+        <label for="TipoDieta">Pescetarianos</label>
+        <input type="radio" name="TipoDieta" value="9" id="formApivegetariano" />
+        <label for="TipoDieta">Apivegetariano</label>
+        <br>
+        <input type="radio" name="TipoDieta" value="10" id="formLactovegetarian" />
+        <label for="TipoDieta">Lactovegetariano</label>
+        <input type="radio" name="TipoDieta" value="11" id="formOvovegetariano" />
+        <label for="TipoDieta">Ovovegetariano</label><br>
+        <input type="radio" name="TipoDieta" value="12" id="formOvolactovegetariano" />
+        <label for="TipoDieta">Ovolactovegetariano</label>
 
-      <input class="botons" type="submit" value="Agregar al carrito" />
-    </fieldset>
-  </form>
+        <input class="botons" type="submit" value="Agregar al carrito" />
+      </fieldset>
+    </form>
+
 
   <section class="text">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque laudantium
